--- a/login/assets/css/style.css
+++ b/login/assets/css/style.css
@@ -8,6 +8,7 @@ section {
   width: 100%;
   height: 100vh;
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
